--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Schedule-App",
+    "name": "schedule-app",
     "version": "1.0.0",
     "main": "main.js",
     "devDependencies": {
