--- a/package.json
+++ b/package.json
@@ -4,12 +4,24 @@
     "main": "main.js",
     "type": "commonjs",
     "devDependencies": {
-        "electron": "^36.2.1"
+        "@electron-forge/cli": "^7.8.1",
+        "electron": "^36.2.1",
+        "electron-packager": "^17.1.2"
     },
     "scripts": {
         "start": "electron ."
     },
     "dependencies": {
+        "audic": "^3.0.2",
+        "sound-play": "^1.1.0",
         "uuid": "^11.1.0"
+    },
+    "build": {
+        "extraResources": [
+            {
+                "from": "asset",
+                "to": "asset"
+            }
+        ]
     }
 }
