Switched to electron forge to get rid of build complications.

--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-    "name": "schedule-app",
-    "version": "1.0.0",
-    "main": "main.js",
-    "type": "commonjs",
-    "devDependencies": {
-        "@electron-forge/cli": "^7.8.1",
-        "electron": "^36.2.1",
-        "electron-packager": "^17.1.2"
-    },
-    "scripts": {
-        "start": "electron ."
-    },
-    "dependencies": {
-        "audic": "^3.0.2",
-        "sound-play": "^1.1.0",
-        "uuid": "^11.1.0"
-    },
-    "build": {
-        "extraResources": [
-            {
-                "from": "asset",
-                "to": "asset"
-            }
-        ]
-    }
+  "name": "schedule-app",
+  "version": "1.0.0",
+  "main": "main.js",
+  "type": "commonjs",
+  "devDependencies": {
+    "@electron-forge/cli": "^7.8.1",
+    "@electron-forge/maker-deb": "^7.8.1",
+    "@electron-forge/maker-rpm": "^7.8.1",
+    "@electron-forge/maker-squirrel": "^7.8.1",
+    "@electron-forge/maker-zip": "^7.8.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.8.1",
+    "@electron-forge/plugin-fuses": "^7.8.1",
+    "@electron/fuses": "^1.8.0",
+    "electron": "^36.2.1",
+    "electron-packager": "^17.1.2"
+  },
+  "scripts": {
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.1",
+    "uuid": "^11.1.0"
+  },
+  "build": {
+    "extraResources": [
+      {
+        "from": "asset",
+        "to": "asset"
+      }
+    ]
+  }
 }
